# MCUQuickStart

./: .gitignore  MCUQuickStart.spec  MJ_DemoProject_Tooldistgitee_releases.json  README.md  README_CN.md  main.py  requirements.txt
.claude/: settings.local.json
docs/: CSDN_v1.1.0.md  CSDN_v1.2.0.md  开发记录.md  知乎_v1.2.0.md
docs/superpowers/plans/: 2026-05-19-mcu-template-generator.md
docs/superpowers/specs/: 2026-05-19-mcu-template-generator-design.md  2026-05-20-hex-parser-design.md
src/core/: chip_db.py  i18n.py  project_generator.py  project_validator.py  sdk_manager.py  template_engine.py
src/gui/: main_window.py
src/resources/chips/: gd32f10x.json  gd32f4xx.json  stm32f10x.json  stm32f4xx.json
src/resources/i18n/: en.json  zh.json
src/resources/templates/common/: CMakeLists.txt  debug_print.h  gd32f10x_it.c  gd32f10x_it.h  linker.ld  linker_stm32.ld  main.h  retarget_printf.c  systick.c
src/resources/templates/freertos/: FreeRTOSConfig.h  gd32f10x_it.c  gd32f10x_main.h  gd32f4xx_it.c  gd32f4xx_main.h  stm32f10x_it.c  stm32f10x_main.h  stm32f4xx_it.c
src/resources/templates/gd32f10x/: uvprojx_template.xml
src/resources/templates/gd32f10x/freertos/empty/: main.c
src/resources/templates/gd32f10x/freertos/led/: main.c
src/resources/templates/gd32f10x/freertos/uart/: main.c
src/resources/templates/gd32f10x/led/: main.c
src/resources/templates/gd32f10x/uart/: main.c
src/resources/templates/gd32f4xx/: uvprojx_template.xml
src/resources/templates/gd32f4xx/empty/: main.c
src/resources/templates/gd32f4xx/freertos/empty/: main.c
src/resources/templates/gd32f4xx/freertos/led/: main.c
src/resources/templates/gd32f4xx/freertos/uart/: main.c
src/resources/templates/gd32f4xx/led/: main.c
src/resources/templates/gd32f4xx/rtt/led/: main.c
src/resources/templates/gd32f4xx/rtt/uart/: main.c
src/resources/templates/gd32f4xx/uart/: main.c
src/resources/templates/rtt/: gd32f10x_board.c  gd32f10x_it.c  gd32f10x_main.h  gd32f4xx_board.c  gd32f4xx_it.c  gd32f4xx_main.h  rtconfig.h  stm32f10x_board.c  stm32f10x_it.c  stm32f4xx_board.c  stm32f4xx_it.c  stm32f4xx_main.h
src/resources/templates/stm32f10x/: uvprojx_template.xml
src/resources/templates/stm32f10x/empty/: main.c
src/resources/templates/stm32f10x/freertos/empty/: main.c
src/resources/templates/stm32f10x/freertos/led/: main.c
src/resources/templates/stm32f10x/freertos/uart/: main.c
src/resources/templates/stm32f10x/rtt/empty/: main.c
src/resources/templates/stm32f10x/rtt/led/: main.c
src/resources/templates/stm32f10x/uart/: main.c
src/resources/templates/stm32f4xx/: uvprojx_template.xml
src/resources/templates/stm32f4xx/empty/: main.c
src/resources/templates/stm32f4xx/freertos/led/: main.c
src/resources/templates/stm32f4xx/freertos/uart/: main.c
src/resources/templates/stm32f4xx/led/: main.c
src/resources/templates/stm32f4xx/rtt/empty/: main.c
src/resources/templates/stm32f4xx/rtt/led/: main.c
src/resources/templates/stm32f4xx/uart/: main.c
src/resources/templates/system/: delay.c  delay.h  sysconfig.c  sysconfig.h
